--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,10 @@
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/owl.carousel.css">
   <link rel="stylesheet" href="css/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+ <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Amatica+SC">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.css" />
   <style>
-    body {font-family: "Lato", sans-serif}
+    body {font-family: "Amatica SC"; }
   </style>
 </head>
 <body>
